--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,32 @@
 html, body {
     height: 100%;
 }
-
+/*header*/
 h1 {
     color: #0099FF;
-    font: bold 15px verdana, sans-serif;
+    font: 30px Lucida Grande, sans-serif;
+    padding-left: 10px;
 }
+
+h1:hover {
+    font-weight: bold;
+}
+
+img  {
+    width: 40px;
+    height: auto;
+    opacity: 0.7;
+}
+
+img:hover {
+    opacity: 1.0;
+}
+
+.row {
+    background-color: #f5f5f0;
+}
+/*header end*/
+
 
 .full-height {
     height: 800px;
@@ -19,7 +40,7 @@ h1 {
 
 
 
-
+/*sidebar*/
 button {
   letter-spacing: 2px;
 
@@ -29,3 +50,4 @@ button {
     padding-left: 25px;
     padding-top: 30px;
 }
+/*sidebar end*/
